Store UX overhaul, bundle offers, password back-office and deploy config
Storefront
- Design tokens in tailwind.config: emerald remapped to a deep forest scale, cream/sand/
  line/ink/brass added, real fonts finally loaded (none were before, despite the config
  naming two). font-serif stays a sans alias; font-display is the editorial serif.
- One cart entry point: the logo was the same FiShoppingCart glyph as the cart button, and
  a third floating cart duplicated it on the home page. Badge animates; the mobile badge no
  longer shows a permanent 0.
- Cart shows the true all-in cost (sub-total, delivery, total), typed quantities, undo on
  remove, stock and next-tier hints.
- Quantity tiers are applied in the store, not only at checkout. The list endpoint now sends
  the tiers themselves (it sent a boolean), and cart lines are re-priced on every quantity
  change, so the cart no longer shows 4 x 98 for something charged at 4 x 50.
- Minimum order quantity enforced everywhere; it was read from the API and never used.
- Order tracking: the backend already returned a status timeline and the adapter discarded
  it. Six statuses now keep their identity instead of collapsing into "Processing".
- Reorder, self-service cancel while PENDING, real dashboard counters (three of four were
  hard-zero because they read fields the endpoint never returned).
- Product display unified behind one ProductImage; products without a photo get an
  illustration of what they are. Removed the template's UK address block, phone number and
  a Cloudinary placeholder that 404s.
- Translation: LibreTranslate now covers static UI too, via a DOM pass; next-translate and
  its catalogues removed. Never caches a no-op, which was pinning French permanently.

Bundle offers ("paniers")
- A bundle is a pricing rule, not a product: it never becomes an order line. Checkout
  applies the saving to any cart containing the full set, so assembling it by hand earns
  the same price. Composes with tiers, clamp